--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.file_manager">
+    package="com.example.email_passwort_login">
    <application
-        android:label="file_manager"
+        android:label="email_passwort_login"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
