--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^8.0.8
+  file_picker: ^4.3.3
+  
 
 dev_dependencies:
   flutter_lints: ^1.0.0
