--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.5
   firebase_core: ^1.11.0
+  firebase_storage: ^10.2.7
   flutter:
     sdk: flutter
   fluttertoast: ^8.0.8
